--- a/Status.html
+++ b/Status.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h>Status of life cycle</h>
-<p>practice on status life cycle</p>
+<p>practice on status life cycle moditfication</p>
 </html>
 </body>
 
